# min-devkit

./: .clang-format  .gitignore  .gitmodules  .jenkins.yml  .travis.yml  CMakeLists.txt  ChangeLog.md  HowTo-Contribute.md  HowTo-NewObject.md  HowTo-NewPackage.md  HowTo-UpdateTheAPI.md  Jenkinsfile  License.md  README.md  ReadMe-Public.md  ReadMe.md  _config.yml  appveyor.yml  download.md  example1.md  example2.md  example3.md  example4.md  index.html  index.md  package-info.json.in  params.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml  test.yml
_api/: API-Attribute.md  API-Buffer.md  api-attributes.md  api-buffers.md
_guides/: 1.GuideToWritingObjects.md  GuideToAudio.md  GuideToDataspaces.md  GuideToInitialization.md  GuideToSpecialMethods.md  GuideToThreading.md  GuideToUserInterfaceObjects.md  GuideToWhereToLook.md  SpecialMethods.md  WhereToLook.md
_includes/: footer.html  header.html
_layouts/: home.html
_sass/materialize/components/: _color.scss  _global.scss  _variables.scss
docs/: banger.maxref.xml  buffer.index~.maxref.xml  convolve.maxref.md  convolve.maxref.xml  dcblocker~.maxref.xml  dict.joiner.maxref.xml  index.html  jit.clamp.maxref.xml  jit.stencil.maxref.xml  list.process.maxref.xml  mc.min.info~.maxref.xml  min.adsr~.maxref.xml  min.beat.pattern.maxref.xml  min.beat.random.maxref.xml  min.buffer.index~.maxref.xml  min.buffer.loop~.maxref.xml  min.convolve.maxref.xml  min.dcblocker~.maxref.xml  min.dict.join.maxref.xml  min.edgelow~.maxref.xml  min.edge~.maxref.xml  min.environment.maxref.xml  min.function.maxref.xml  min.hello-world.maxref.xml  min.jit.clamp.maxref.xml  min.jit.stencil.maxref.xml  min.list.process.maxref.xml  min.markdown.maxref.xml  min.meter~.maxref.xml  min.multitouch.maxref.xml  min.note.make.maxref.xml  min.panner~.maxref.xml  min.pan~.maxref.xml  min.patcher.control.maxref.xml  min.phasor~.maxref.xml  min.pi.maxref.xml  min.prefs.maxref.xml  min.progress.maxref.xml  min.project.maxref.xml  min.remote.maxref.xml  (+11 more)
extras/: Min Object Development Kit.maxpat
extras/Min/: C++ Object Development Kit.maxpat
help/: banger.maxhelp  buffer.index~.maxhelp  convolve.maxhelp  dcblocker~.maxhelp  dict.joiner.maxhelp  jit.clamp.maxhelp  jit.stencil.maxhelp  jit.verlet.maxhelp  list.process.maxhelp  mc.min.info~.maxhelp  min.adsr~.maxhelp  min.beat.pattern.maxhelp  min.beat.random.maxhelp  min.buffer.index~.maxhelp  min.buffer.loop~.maxhelp  min.convolve.maxhelp  min.dcblocker~.maxhelp  min.dict.join.maxhelp  min.edge~.maxhelp  min.environment.maxhelp  min.function.maxhelp  min.hello-world.maxhelp  min.jit.clamp.maxhelp  min.jit.stencil.maxhelp  min.list.process.maxhelp  min.markdown.maxhelp  min.meter~.maxhelp  min.multitouch.maxhelp  min.note.make.maxhelp  min.panner~.maxhelp  min.patcher.control.maxhelp  min.phasor~.maxhelp  min.pi.maxhelp  min.prefs.maxhelp  min.progress.maxhelp  min.remote.maxhelp  min.sifthelp.aiff  min.sift~.maxhelp  min.stress~.maxhelp  min.textslider.maxhelp  (+9 more)
init/: min-objectmappings.txt
javascript/: min-package-list.js
jsui/: min.adsrui.js
misc/: icon.psd  launcher-arrows.graffle
script/: ReadMe-Template.md  c74_add_project.cmake  create_package.rb  create_package.sh  deploy.rb  doc.rb
script/cmake-mac/: readme.txt
source/projects/_shared/: signal_routing_objects.h
source/projects/banger/: banger.cpp  test_banger.cpp
source/projects/buffer.index_tilde/: buffer.index_tilde.cpp
source/projects/convolve/: convolve.cpp
source/projects/dcblocker_tilde/: CMakeLists.txt  dcblocker_tilde.cpp  dcblocker_tilde_test.cpp  test_dcblocker_tilde.cpp
source/projects/dict.joiner/: dict.joiner.cpp  dict.joiner_test.cpp
source/projects/jit.clamp/: CMakeLists.txt  jit.clamp.cpp  jit.clamp_test.cpp
source/projects/jit.stencil/: jit.stencil.cpp
source/projects/jit.verlet/: jit.verlet.cpp
source/projects/later/: later.cpp
source/projects/list.process/: list.process.cpp  list.process_test.cpp
source/projects/lores_tilde/: lores_tilde.cpp
source/projects/mc.min.info_tilde/: mc.min.info_tilde.cpp
source/projects/min.adsr_tilde/: min.adsr_tilde.cpp  min.adsr_tilde_test.cpp
source/projects/min.beat.pattern/: min.beat.pattern.cpp
source/projects/min.beat.random/: min.beat.random.cpp  min.beat.random_test.cpp
source/projects/min.buffer.cons_tilde/: min.buffer.cons_tilde.cpp
source/projects/min.buffer.index_tilde/: min.buffer.index_tilde.cpp
source/projects/min.buffer.lck_tilde/: min.buffer.lck_tilde.cpp
source/projects/min.buffer.loop_tilde/: min.buffer.loop_tilde.cpp
source/projects/min.buffer.multi_tilde/: min.buffer.multi_tilde.cpp
source/projects/min.convolve/: min.convolve.cpp  min.convolve_test.cpp
source/projects/min.dcblocker_tilde/: min.dcblocker_tilde.cpp  min.dcblocker_tilde_test.cpp
source/projects/min.dict.join/: min.dict.join.cpp  min.dict.join_test.cpp
source/projects/min.edge_tilde/: min.edge_tilde.cpp  min.edge_tilde_test.cpp
source/projects/min.edgelow_tilde/: min.edgelow_tilde.cpp  min.edgelow_tilde_test.cpp
source/projects/min.environment/: CMakeLists.txt  min.environment.cpp  min.environment.mac.cpp  min.environment.windows.cpp
source/projects/min.function/: min.function.cpp
source/projects/min.hello-world/: min.hello-world.cpp  min.hello-world_test.cpp
source/projects/min.jit.clamp/: min.jit.clamp.cpp  min.jit.clamp_test.cpp
source/projects/min.jit.stencil/: min.jit.stencil.cpp
source/projects/min.later/: min.later.cpp
source/projects/min.list.process/: min.list.process.cpp  min.list.process_test.cpp
source/projects/min.markdown/: CMakeLists.txt  min.markdown.cpp
source/projects/min.markdown/hoedown/: .gitignore
source/projects/min.markdown/hoedown/src/: html.c
source/projects/min.meter_tilde/: min.meter_tilde.cpp
source/projects/min.multitouch/: CMakeLists.txt  min.multitouch.cpp
source/projects/min.note.make/: min.note.make.cpp  min.note.make_test.cpp
source/projects/min.pan_tilde/: min.pan_tilde_test.cpp
source/projects/min.textslider/: CMakeLists.txt  min.textslider.cpp
(+2340 files in other folders)
